styles.css
:root {
  --ff-main: 'Poppins', sans-serif; /* 300/400/500/700 */

  --col-main-text: #262626;
  --col-main-background: #f5f5f5;
  --col-background-highlight: #f8fafc;
  --col-highlight: #34d399;
  --col-highlight-dark: #047857;
  --col-error: #dc2626;
}

* {
  box-sizing: border-box;
  padding: 0;
}

body {
  min-height: 100vh;
  height: 100%;
  width: 100vw;
  font-family: var(--ff-main);
}

/* Header */

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 2rem;
  width: 100vw;
  height: min-content;
  background-color: var(--col-background-highlight);
}

.header-title {
  display: flex;
  justify-content: center;
  align-items: center;
}

.header-title h1 {
  color: var(--col-main-text);
}

.header-title i {
  font-size: 3rem;
  background: rgb(29, 253, 252);
  background: linear-gradient(
    86deg,
    rgba(29, 253, 252, 0.8701855742296919) 14%,
    rgba(29, 253, 190, 0.6558998599439776) 50%,
    rgba(85, 215, 107, 1) 100%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.header-buttons {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.header-buttons button {
  outline: none;
  border: none;
}

.open-book-modal {
  font-size: 2.5rem;
  background: rgb(29, 253, 252);
  background: rgb(4, 20, 10);
  background: rgb(4, 20, 10);
  background: linear-gradient(
    86deg,
    rgba(4, 20, 10, 0.8295693277310925) 18%,
    rgba(29, 253, 149, 0.865983893557423) 50%,
    rgba(21, 66, 28, 1) 100%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Library cards section */

.booklist {
  height: 100%;
  width: 100vw;
}

.booklist-wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
  grid-auto-rows: min-content;
  gap: 1rem;
  padding: 2rem;
}

.book-card {
  padding: 0.5rem;
  border: 2px solid var(--col-main-text);
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.book-card-author {

}

.book-card-pages {

}

.book-card-description {
  font-size: small;
}

.book-card-interactive {
  margin-top: auto;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.book-card-checkboxes {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}

.book-card-read label {
  padding: 0 0.2rem;
}

.book-card-buttons {
  display: flex;
  height: min-content;
  width: min-content;
  gap: 0.2rem;
}


main {
  height: 100%;
  width: 100vw;
  background-color: var(--col-main-background);
}

/* Add book modal section */

.modal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  align-items: center;
  justify-content: center;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.2);
}

.book-form {
  background-color: var(--col-background-highlight);
  width: min-content;
  padding: 2rem;
  border-radius: 1rem;

}

.book-form-element {
  padding: 0.2rem;
}

.book-form-element textarea {
  width: 100%;
}

.book-form-rating {

}

.orange-star {
  color: #f90;
}

.book-form-rating input {
  display: none;
}

.book-form-rating label {
  color: #ccc;
  cursor: pointer;
}

.book-form-rating :checked,
.book-form-rating :checked + label {
  color: #f90;
}

.book-form-rating label:hover,
.book-form-rating label:hover {
  color: #fc0;
}

.form-buttons {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.book-form-submit {
  display: block;
}

.book-form-update {
  display: block;
}

